Added a view all planes button and a Boeing button to filter planes

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,5 +4,7 @@
 <p id="fourth">Merhaba</p>
 
 <button onclick="changeColors()">Do something</button>
+<button onclick="showBoeingPlanes()">Show Boeing Planes</button>
+<button onclick="showAllPlanes()">Show All Planes</button>
 
 <div id="responseDiv"></div>
